<resources>
    <string name="app_name">TbcHomework8</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="deleted_user_counter">Deleted Users Counter</string>
    <string name="active_users_counter">Active Users Counter</string>
    <string name="add_user">Add User</string>
    <string name="delete_user">Delete User</string>
    <string name="update_user">Update User</string>
    <string name="zero">0</string>
    <string name="email_is_incorrect">Email Is Incorrect</string>
    <string name="error">Error</string>
    <string name="success">Success</string>
    <string name="user_already_exists">User Already Exists</string>
    <string name="user_added_successfully">User Added Successfully</string>
    <string name="user_deleted_successfully">User Deleted Successfully</string>
    <string name="user_does_not_exists">User Does Not Exists</string>
    <string name="firstname_is_empty">FirstName Is Empty</string>
    <string name="lastname_is_empty">LastName Is Empty</string>
    <string name="age_is_empty">Age Is Empty</string>
    <string name="email_is_empty">Email Is Empty</string>
</resources>