<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:textColor="@color/white"
        android:hint="@string/first_name"
        android:textColorHint="@color/white" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvFirstNameStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error"
        android:visibility="gone"
        android:textColor="@android:color/holo_red_dark"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:textSize="14sp" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:layout_marginEnd="30dp"

        android:hint="@string/last_name"
        android:textColorHint="@color/white" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLastNameStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error"
        android:visibility="gone"
        android:textColor="@android:color/holo_red_dark"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:textSize="14sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:inputType="phone"
        android:hint="@string/age"
        android:textColorHint="@color/white" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAgeStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error"
        android:visibility="gone"
        android:textColor="@android:color/holo_red_dark"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:textSize="14sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/email"
        android:textColorHint="@color/white" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvEmailStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error"
        android:visibility="gone"
        android:textColor="@android:color/holo_red_dark"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:textSize="14sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:layout_marginEnd="30dp"
        android:textStyle="bold"
        android:text="@string/active_users_counter"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCounterActiveUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:textColor="@color/red"
        android:text="@string/zero"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginEnd="30dp"
        android:text="@string/deleted_user_counter"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCounterDeleteUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="30dp"
        android:textColor="@color/red"
        android:text="@string/zero"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAddUser"
        android:layout_marginTop="20dp"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/add_user"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDeleteUser"
        android:layout_marginTop="20dp"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/delete_user"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnUpdateUser"
        android:layout_marginTop="20dp"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:text="@string/update_user"
        />



</androidx.appcompat.widget.LinearLayoutCompat>